[feature]: toolbar,editable content of nodes by double click, enter or blur to update content,[remove]: create node shortcut, auto adjust font size when resize,box-shadow of node, [better]: UI,[fix]: wrap content when width not fit

--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-body {
-    font-family: 'Comic Sans MS', cursive;
-}
-
 * {
+    font-family: 'Comic Sans MS', cursive;
     box-sizing: border-box;
     user-select: none;
+    font-size: 1em;
+}
+
+body {
+    overflow: hidden;
 }
 
 .target {
@@ -14,23 +16,55 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #EA2264;
+    background: black;
     padding: 5px 1em;
-    border-radius: 4px;
-    box-shadow: 2px 2px 1px #ea226544;
+    border-radius: 2px;
+    /* box-shadow: 2px 2px 1px #ea226544; */
     color: white;
     position: absolute;
+    word-break: keep-all;
+    /* flex-wrap: wrap; */
 }
 
 .root {
     position: relative;
-    border: 2px solid;
+    /* border: 2px solid; */
     max-width: 100vw;
-    height: 80vh;
+    height: 100vh;
     overflow: hidden;
 }
 
-.btn-selected {
-    background-color: red;
+.toolbar button {
+    background-color: transparent;
+    padding: 5px 10px;
+    outline: none;
+    border: 1px solid black;
+    border-radius: 5px;
+    /* color: white; */
+}
+
+button.btn-selected {
+    background-color: black;
     color: white;
+}
+
+.toolbar {
+    position: fixed;
+    top: 0;
+    left: 25%;
+    z-index: 1000;
+    background: white;
+    border-left: 10px solid black;
+    box-shadow: 5px 5px 1px black;
+    border-radius: 12px;
+    width: 50%;
+    padding: 10px;
+}
+
+.target input {
+    color: white;
+    background: transparent;
+    outline: none;
+    border: none;
+    width: 100%;
 }
